--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "scripts-runner",
     "displayName": "Scripts Runner",
     "description": "Execute scripts from git repository with parameters",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "repository": {
         "type": "git",
         "url": "https://github.com/avivilloz/scripts-runner-vs-code-plugin.git"
@@ -130,6 +130,13 @@
     "dependencies": {
         "simple-git": "^3.21.0"
     },
+    "bundledDependencies": [
+        "simple-git",
+        "@kwsites/file-exists",
+        "@kwsites/promise-deferred",
+        "debug",
+        "ms"
+    ],
     "devDependencies": {
         "@types/node": "^16.0.0",
         "@types/vscode": "^1.85.0",
