--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "publisher": "avivilloz",
     "name": "scripts-runner",
     "displayName": "Scripts Runner",
-    "description": "Execute scripts from git repository with parameters",
-    "version": "0.0.6",
+    "description": "Execute scripts from git repositories with parameters",
+    "version": "0.0.7",
     "repository": {
         "type": "git",
         "url": "https://github.com/avivilloz/scripts-runner-vs-code-plugin.git"
