--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "name": "scripts-runner",
     "displayName": "Scripts Runner",
     "description": "Execute scripts from git repositories with parameters",
-    "version": "0.0.7",
+    "version": "0.0.9",
+    "icon": "icon.png",
     "repository": {
         "type": "git",
         "url": "https://github.com/avivilloz/scripts-runner-vs-code-plugin.git"
@@ -15,9 +16,7 @@
     "categories": [
         "Other"
     ],
-    "activationEvents": [
-        "*"
-    ],
+    "activationEvents": [],
     "main": "./out/extension.js",
     "contributes": {
         "commands": [
