--- a/package.json
+++ b/package.json
@@ -49,13 +49,18 @@
                 "command": "scripts-runner.disable",
                 "title": "Disable Scripts Runner",
                 "category": "Scripts Runner"
+            },
+            {
+                "command": "scripts-runner.configureSource",
+                "title": "Add Source",
+                "icon": "$(add)"
             }
         ],
         "viewsContainers": {
-            "activitybar": [
+            "panel": [
                 {
                     "id": "scripts-runner",
-                    "title": "Scripts Runner",
+                    "title": "Scripts",
                     "icon": "$(play)"
                 }
             ]
@@ -64,7 +69,7 @@
             "scripts-runner": [
                 {
                     "id": "scriptsExplorer",
-                    "name": "Available Scripts"
+                    "name": "Scripts"
                 }
             ]
         },
@@ -89,46 +94,62 @@
                     "command": "scripts-runner.clearFilters",
                     "when": "view == scriptsExplorer && scriptsRunner.hasFilters",
                     "group": "navigation"
+                },
+                {
+                    "command": "scripts-runner.configureSource",
+                    "when": "view == scriptsExplorer",
+                    "group": "navigation@0"
                 }
             ]
         },
         "configuration": {
             "title": "Scripts Runner",
             "properties": {
-                "scriptsRunner.repositories": {
-                    "type": "array",
-                    "default": [],
-                    "items": {
-                        "type": "object",
-                        "required": [
-                            "url"
-                        ],
-                        "properties": {
-                            "url": {
-                                "type": "string",
-                                "description": "Git repository URL containing scripts"
-                            },
-                            "branch": {
-                                "type": "string",
-                                "description": "Git branch to use (leave empty for default branch)"
-                            },
-                            "scriptsPath": {
-                                "type": "string",
-                                "default": "scripts",
-                                "description": "Path to scripts directory relative to repository root"
-                            },
-                            "name": {
-                                "type": "string",
-                                "description": "Display name for this repository"
-                            }
-                        }
-                    },
-                    "description": "List of Git repositories containing scripts"
-                },
                 "scriptsRunner.enabled": {
                     "type": "boolean",
                     "default": true,
                     "description": "Enable/disable Scripts Runner"
+                },
+                "scriptsRunner.sources": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "required": [
+                            "type"
+                        ],
+                        "properties": {
+                            "type": {
+                                "type": "string",
+                                "enum": [
+                                    "git",
+                                    "local"
+                                ],
+                                "description": "Type of script source"
+                            },
+                            "name": {
+                                "type": "string",
+                                "description": "Display name for the source"
+                            },
+                            "url": {
+                                "type": "string",
+                                "description": "Git repository URL (required for git type)"
+                            },
+                            "branch": {
+                                "type": "string",
+                                "description": "Git branch name (optional for git type)"
+                            },
+                            "path": {
+                                "type": "string",
+                                "description": "Local filesystem path (required for local type)"
+                            },
+                            "scriptsPath": {
+                                "type": "string",
+                                "description": "Path to scripts directory within the repository"
+                            }
+                        }
+                    },
+                    "default": [],
+                    "description": "Script sources configuration"
                 }
             }
         }
