--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
             },
             {
                 "command": "scripts-runner.configureSource",
-                "title": "Add Source",
-                "icon": "$(add)"
+                "title": "Manage Sources",
+                "icon": "$(gear)"
             }
         ],
         "viewsContainers": {
