--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
             "ES2020"
         ],
         "sourceMap": true,
-        "rootDir": "src",
+        "rootDir": "./",
         "outDir": "out",
         "strict": true,
         "noImplicitReturns": true,
