--- a/package.json
+++ b/package.json
@@ -246,7 +246,7 @@
         "watch": "tsc -watch -p ./",
         "test": "node ./out/test/runTest.js",
         "pretest": "npm run compile",
-        "package": "vsce package"
+        "package": "vsce package --allow-missing-repository"
     },
     "dependencies": {
         "@vscode/codicons": "^0.0.36",
@@ -271,5 +271,10 @@
         "mocha": "^10.2.0",
         "typescript": "^5.0.0",
         "ts-node": "^10.9.2"
-    }
+    },
+    "files": [
+        "out/**/*",
+        "dist/**/*",
+        "node_modules/@vscode/codicons/dist/codicon.ttf"
+    ]
 }
