--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,22 @@
         "module": "commonjs",
         "target": "ES2020",
         "lib": [
-            "ES2020"
+            "ES2020",
+            "DOM"
         ],
         "sourceMap": true,
-        "rootDir": "./",
+        "rootDir": "src",
         "outDir": "out",
         "strict": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "noUnusedParameters": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "resolveJsonModule": true
     },
+    "include": [
+        "src/**/*"
+    ],
     "exclude": [
         "node_modules",
         ".vscode-test"
